# mlx_json_lora

./: .coverage  .env  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  generate_data.py  lora_config.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  quickstart_config.yaml  requirements-dev.txt  requirements.txt  setup.py
.recovery/: checkpoint.sh
configs/models/: gemma.yaml  lora_config.yaml  model_selection.yaml  phi3.yaml  qwen.yaml
docs/: api.md  best_practices.md  contributing.md  installation.md
mlx_lora_trainer/: __init__.py  inference.py  lora.py  model.py  registry.py  train.py  trainer.py  utils.py
mlx_lora_trainer/models/: base.py  gemma.py  phi.py  qwen.py
mlx_lora_trainer/scripts/: __init__.py
mlx_lora_trainer/scripts/python/: __init__.py  cli.py  download.py  prepare_data.py  test_config.py
mlx_lora_trainer/utils/: __init__.py  batch.py  error_handling.py  metrics.py  model_utils.py  profiler.py  utils.py
outputs/phi3_test/: config.yaml
scripts/: benchmark.py
scripts/python/: evaluate.py  training_logger.py
scripts/shell/: chat.sh  export.sh  quickstart.sh  run_inference.sh  run_tests.sh  run_tutorial.sh  setup_test_env.sh  test_pipeline.sh  test_workflow.sh  train_lora.sh
tests/: conftest.py  test_cli.py  test_e2e.py  test_inference.py  test_integration.py  test_lora.py  test_model.py
