[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx_lora_trainer"
version = "0.1.0"
description = "MLX LoRA Trainer - Fine-tuning toolkit optimized for Apple Silicon"
readme = "README.md"
authors = [
    {name = "Codeium", email = "support@codeium.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.21.0",
    "transformers>=4.36.0",
    "datasets>=2.15.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "torch>=2.1.0",
    "sentencepiece>=0.2.0",
    "accelerate>=1.0.0",
    "einops>=0.8.0",
    "fastapi>=0.115.2",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/codeium/mlx-lora-trainer"
Repository = "https://github.com/codeium/mlx-lora-trainer.git"

[tool.setuptools]
packages = ["mlx_lora_trainer"]

[tool.setuptools.package-data]
mlx_lora_trainer = ["py.typed"]
